fix: improve pixel perfect for the form page on tablet

--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -49,7 +49,7 @@
   margin: 0 0 28px 8px;
 
   @media (min-width: @tablet) {
-    margin: 3px 0 0 5px;
+    margin: 2px 0 0 3px;
   }
 }
 
