--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -19,7 +19,7 @@
     }
 
     @media (min-width: @tablet) {
-      margin-bottom: 48px;
+      margin-bottom: 64px;
       padding: 0;
       width: 50%;
       box-sizing: border-box;
@@ -32,12 +32,18 @@
 
   &--wide {
     @media (min-width: @tablet) {
-      padding: 0 0 30px;
+      padding: 0 0 48px;
       width: 100%;
     }
 
     @media (min-width: @desktop) {
       padding: 0 0 57px;
+    }
+  }
+
+  &--wide--2 {
+    @media (min-width: @tablet) {
+      padding: 0 0 26px;
     }
   }
 
@@ -153,7 +159,7 @@
       display: grid;
       grid-template-columns: 224px 224px;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
       column-gap: 32px;
     }
 
@@ -197,8 +203,8 @@
 
   &--textarea {
     width: 100%;
-    height: 150px;
-    margin-bottom: 56px;
+    height: 160px;
+    margin-bottom: 51px;
     resize: none;
   }
 
@@ -231,7 +237,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -45%);
   }
 
   &--phone::after {
@@ -256,6 +262,7 @@
 }
 
 .form__submit {
+  margin-left: -3px;
   width: 100%;
   max-width: 324px;
 }
@@ -266,4 +273,8 @@
   line-height: 21px;
   color: rgba(51, 51, 51, 0.6);
   text-align: end;
+
+  @media (min-width: @tablet) {
+    font-size: 14px;
+  }
 }
