--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -26,7 +26,8 @@
     background-position: bottom, 50% 100%;
 
     @media (min-width: @tablet) {
-      padding: 100px 45px 120px;
+      padding: 95px 45px 117px;
+      background-size: auto, 1200px auto;
       background-position: bottom;
     }
   }
@@ -38,6 +39,6 @@
   height: auto;
 
   @media (min-width: @tablet) {
-    width: 460px;
+    width: 459px;
   }
 }
