--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -3,7 +3,7 @@
   padding: 36px 20px 28px;
 
   @media (min-width: @tablet) {
-    padding: 64px 0 102px;
+    padding: 64px 0 105px;
   }
 
   @media (min-width: @desktop) {
@@ -16,7 +16,7 @@
   max-width: 648px;
 
   @media (min-width: @tablet) {
-    padding: 0 60px 64px;
+    padding: 0 60px 60px;
     max-width: 960px;
   }
 }
