--- a/source/less/blocks/text-block.less
+++ b/source/less/blocks/text-block.less
@@ -67,7 +67,7 @@
 
   &--review {
     @media (min-width: @tablet) {
-      margin-bottom: 20px;
+      margin-bottom: 23px;
     }
 
     @media (min-width: @desktop) {
